--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -43,8 +43,8 @@ $cols = [
                     </li>
                     <li><a href="/docs/getting-started-for-web">Appwrite for Web</a></li>
                     <li><a href="/docs/getting-started-for-flutter">Appwrite for Flutter</a></li>
-                    <li><a href="/docs/getting-started-for-apple">Appwrite for Apple (beta)</a></li>
-                    <li><a href="/docs/getting-started-for-android">Appwrite for Android (beta)</a></li>
+                    <li><a href="/docs/getting-started-for-apple">Appwrite for Apple</a></li>
+                    <li><a href="/docs/getting-started-for-android">Appwrite for Android</a></li>
                     <li><a href="/docs/getting-started-for-server">Appwrite for Server</a></li>
                     <li><a href="/docs/command-line">Appwrite CLI</a></li>
                     <li><a href="/docs/sdks">SDKs</a></li>
