--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -131,13 +131,10 @@ close the window.
 <div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
   <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
 
-Client client = Client();
-
-client
+Client client = Client()
     .setEndpoint('https://localhost/v1') // Your Appwrite Endpoint
-    .setProject('5e8cf4f46b5e8') // Your project ID
-    .setSelfSigned(status: true) // For self signed certificates, only use for development
-;
+    .setProject('5e8cf4f46b5e8')         // Your project ID
+    .setSelfSigned(status: true);        // For self signed certificates, only use for development
 </code></pre>
 </div>
 
@@ -153,13 +150,12 @@ client
   <pre class="line-numbers"><code class="prism language-dart" data-prism>// Register User
 Account account = Account(client);
 
-final user = await account
-    .create(
-        userId: 'unique()',
-        email: 'me@appwrite.io',
-        password: 'password',
-        name: 'My Name'
-    );
+final user = await account.create(
+    userId: ID.unique(),
+    email: 'me@appwrite.io',
+    password: 'password',
+    name: 'My Name'
+);
 </code></pre>
 </div>
 
@@ -185,24 +181,19 @@ subscription.stream.listen((response) {
 <div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
   <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
 
-Client client = Client();
+Client client = Client()
+    .setEndpoint('https://localhost/v1')  // Your Appwrite Endpoint
+    .setProject('5e8cf4f46b5e8')          // Your project ID
+    .setSelfSigned(status: true);         // For self signed certificates, only use for development
 
-client
-    .setEndpoint('https://localhost/v1') // Your Appwrite Endpoint
-    .setProject('5e8cf4f46b5e8') // Your project ID
-    .setSelfSigned(status: true) // For self signed certificates, only use for development
-;
-
-// Register User
 Account account = Account(client);
 
-final user = await account
-    .create(
-        userId: 'unique()',
-        email: 'me@appwrite.io',
-        password: 'password',
-        name: 'My Name'
-    );
+final user = await account.create(
+    userId: ID.unique(),
+    email: 'me@appwrite.io',
+    password: 'password',
+    name: 'My Name'
+);
 
 // Subscribe to files channel
 final realtime = Realtime(client);
