--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -110,23 +110,22 @@
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Permission, Role } from "appwrite";
         
-const client = new Client();
-
-client
+const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
     .setProject('[PROJECT_ID]');
 
-const databases = new Databases(client, '[DATABASE_ID]');
+const databases = new Databases(client);
 
 let promise = databases.createDocument(
-    '[COLLECTION_ID]', // Collection ID
-    {'actorName': 'Chris Evans', 'height': 183}, // Data
-    [ // Permissions
-        Permission.read(Role.any()), // Anyone can view this document
-        Permission.update(Role.team("writers")), // Writers can update this document
-        Permissions.update(Role.team("admin")), // Admins can update this document
-       Permission.delete(Role.user("5c1f88b42259e")) // User 5c1f88b42259e can delete this document
-       Permission.delete(Role.team("admin")) // Admins can delete this document
+    '[DATABASE_ID]',
+    '[COLLECTION_ID]',
+    {'actorName': 'Chris Evans', 'height': 183},
+    [
+        Permission.read(Role.any()),                  // Anyone can view this document
+        Permission.update(Role.team("writers")),      // Writers can update this document
+        Permission.update(Role.team("admin")),       // Admins can update this document
+        Permission.delete(Role.user("5c1f88b42259e")) // User 5c1f88b42259e can delete this document
+        Permission.delete(Role.team("admin"))         // Admins can delete this document
     ]
 );
 
@@ -144,21 +143,20 @@ promise.then(function (response) {
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Permission, Role } from "appwrite";
         
-const client = new Client();
-
-client
+const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
     .setProject('[PROJECT_ID]');
 
-const databases = new Databases(client, '[DATABASE_ID]');
+const databases = new Databases(client);
 
 let promise = databases.createDocument(
+    '[DATABASE_ID]',
     '[COLLECTION_ID]',
     {'actorName': 'Chris Evans', 'height': 183},
     [
-        Permission.read(Role.team("5c1f88b87435e")), // Only users of team 5c1f88b87435e can read the document
+        Permission.read(Role.team("5c1f88b87435e")),            // Only users of team 5c1f88b87435e can read the document
         Permission.update(Role.team("5c1f88b87435e", "owner")), // Only users of team 5c1f88b87435e with the role owner can update the document
-        Permission.delete(Role.team("5c1f88b87435e", "owner") // Only users of team 5c1f88b87435e with the role owner can delete the document
+        Permission.delete(Role.team("5c1f88b87435e", "owner")   // Only users of team 5c1f88b87435e with the role owner can delete the document
     ]
 );
 
