--- a/app/views/docs/security.phtml
+++ b/app/views/docs/security.phtml
@@ -1,6 +1,6 @@
 <p>Appwrite was designed for security and privacy. We built the server, services, and APIs with lots of built-in security features to provide protection by default to both developers building apps on Appwrite and users consuming those apps.</p>
 
-<p>Below is a list of some of the security features enabled by default when you setup your new Appwrite project.</p>
+<p>Below is a list of some security features enabled by default when you set up your new Appwrite project.</p>
 
 <h2>SSL Certificates</h2>
 
