--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -78,7 +78,7 @@ client
 
 const storage = new Storage(client);
 
-const promise = storage.createFile('[BUCKET_ID]', 'unique()', document.getElementById('uploader').files[0]);
+const promise = storage.createFile('[BUCKET_ID]', ID.unique(), document.getElementById('uploader').files[0]);
 
 promise.then(function (response) {
     console.log(response); // Success
